Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/InvalidChar1.ru

/? Error Léxico, char con más de un carácter, salida: carácter invalido
'aa'